--- a/PictureEditor_Test/PictureEditor_Test.csproj
+++ b/PictureEditor_Test/PictureEditor_Test.csproj
@@ -22,72 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Ellias\Ressources\" />
     <Folder Include="Ressources\" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Ellias\Ressources\BlackAndWhite.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\BlackAndWhite.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\BlackAndWhite.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\FilterHell.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\FilterHell.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\FilterHell.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_ForAlgo.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_ForAlgo.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_ForAlgo.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian3x3.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian3x3.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian3x3.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian5x5.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian5x5.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_Laplacian5x5.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_X_Laplacian3x3_Y_Laplacian5x5.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_X_Laplacian3x3_Y_Laplacian5x5.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\Hell_X_Laplacian3x3_Y_Laplacian5x5.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\original.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\original.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Ellias\Ressources\original.png">
+    <None Update="Ressources\Moto.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
