Unit test de FILTERS & EDGE DETECTION faits

--- a/PictureEditor_Test/PictureEditor_Test.csproj
+++ b/PictureEditor_Test/PictureEditor_Test.csproj
@@ -25,11 +25,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Ressources\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <None Update="Ressources\BlackAndWhite.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\KirschXY.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\LaplacianXY.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\Magic.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Ressources\Moto.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\Original.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\SobelXY.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Ressources\Swap.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
